--- a/app/[lang]/global.css
+++ b/app/[lang]/global.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
